--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: Go CI/CD
 
 on:
   push:
@@ -10,32 +7,52 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
 
-    - name: Build-DB
+    - name: Build Database Services
       run: docker-compose build
 
-    - name: Create-DB
+    - name: Start Database Services
       run: docker-compose up -d
 
-    - name: Test
-      run: go test -v main_test.go
+    - name: Wait for PostgreSQL to be Ready
+      run: |
+        for i in {1..10}; do
+          if docker exec $(docker ps -qf "name=postgres") pg_isready -U root; then
+            echo "PostgreSQL is ready";
+            exit 0;
+          fi;
+          echo "Waiting for PostgreSQL...";
+          sleep 5;
+        done;
+        echo "PostgreSQL failed to start";
+        exit 1;
 
+    - name: Run Tests
+      env:
+        DATABASE_URL: "postgresql://root:root@localhost:5432/root"
+      run: go test ./... -v
 
   build:
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Build
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+
+    - name: Build Application
       run: go build -v main.go
