--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,7 @@
-name: Go CI/CD
+# This workflow will build a golang project
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+
+name: Go
 
 on:
   push:
@@ -7,11 +10,11 @@ on:
     branches: [ "main" ]
 
 jobs:
+
   test:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
@@ -23,41 +26,21 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y docker-compose
 
-    - name: Build Database Services
+    - name: Build-DB
       run: docker-compose build
 
-    - name: Start Database Services
+    - name: Create-DB
       run: docker-compose up -d
 
-    - name: Wait for PostgreSQL to be Ready
-      run: |
-        for i in {1..10}; do
-          if docker exec $(docker ps -qf "name=postgres") pg_isready -U root; then
-            echo "PostgreSQL is ready";
-            exit 0;
-          fi;
-          echo "Waiting for PostgreSQL...";
-          sleep 5;
-        done;
-        echo "PostgreSQL failed to start";
-        exit 1;
+    - name: Test
+      run: go test -v main_test.go
 
-    - name: Run Tests
-      env:
-        DATABASE_URL: "postgresql://root:root@localhost:5432/root"
-      run: go test ./... -v
 
   build:
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
-
-    - name: Build Application
+    - uses: actions/checkout@v4
+    
+    - name: Build
       run: go build -v main.go
