--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,20 @@ services:
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
-      - POSTGRES_DB=root      
-    ports:
-      - "5432:5432"
+      - POSTGRES_DB=root
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data  
+      - ./postgres-data:/var/lib/postgresql/data
 
-  pgadmin-compose:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "gui@alura.com"
-      PGADMIN_DEFAULT_PASSWORD: "123456"
+  app:
+    image: golang:1.22
+    command:
+      - go
+      - run
+      - main.go
+    volumes:
+      - ./:/app
+    working_dir: /app
     ports:
-      - "54321:80"
+      - 8080:8080
     depends_on:
       - postgres
-
