--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Inicia o banco
       run: docker compose up -d postgres
 
+    - name: Saber se o docker esta rodando
+      run: docker ps
+
     - name: Aguardar banco iniciar
       run: |
         until docker compose exec postgres pg_isready; do
