--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - POSTGRES_DB=root
     ports:
       - 5432:5432
+    container_name: postgres
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
 
