--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         go-version: '1.22'
 
+    - name: Exclui banco
+      run: docker-compose down -v
+    
     - name: Inicia o banco
       run: docker compose up postgres
 
