--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.22'
 
     - name: Exclui banco
-      run: docker compose down -v
+      run: docker volume prune --force
     
     - name: Inicia o banco
       run: docker compose up postgres
