--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,7 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
+    
     - uses: actions/checkout@v4
 
     - name: Set up Go
@@ -21,17 +22,23 @@ jobs:
       with:
         go-version: '1.22'
 
-    - name: Exclui banco
-      run: docker volume prune --force
-    
+    - name: Exclui volumes antigos
+      run: docker volume rm postgres-data
+
     - name: Inicia o banco
-      run: docker compose up postgres
+      run: docker-compose up -d postgres
 
     - name: Verificar status do container
       run: docker ps -a
 
     - name: Verificar logs do banco
       run: docker logs $(docker ps -q --filter "name=postgres")
+
+    - name: Remover dados antigos do banco
+      run: docker-compose down -v
+
+    - name: Reiniciar banco
+      run: docker-compose restart postgres
 
     - name: Aguardar banco iniciar
       run: docker compose exec postgres pg_isready
