--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,6 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-    
     - uses: actions/checkout@v4
 
     - name: Set up Go
@@ -22,26 +21,8 @@ jobs:
       with:
         go-version: '1.22'
 
-    - name: Exclui volumes antigos
-      run: docker volume rm postgres-data
-
     - name: Inicia o banco
-      run: docker-compose up -d postgres
-
-    - name: Verificar status do container
-      run: docker ps -a
-
-    - name: Verificar logs do banco
-      run: docker logs $(docker ps -q --filter "name=postgres")
-
-    - name: Remover dados antigos do banco
-      run: docker-compose down -v
-
-    - name: Reiniciar banco
-      run: docker-compose restart postgres
-
-    - name: Aguardar banco iniciar
-      run: docker compose exec postgres pg_isready
+      run: docker compose up -d postgres
 
     - name: Lint
       uses: golangci/golangci-lint-action@v6
@@ -50,4 +31,4 @@ jobs:
         args: controllers/ database/ models/ routes
 
     - name: Test
-      run: DB_HOST=${{ secrets.DB_HOST }} DB_USER=${{ secrets.DB_USER }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
+      run: DB_HOST=${{ secrets.DB_HOST }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_USER=${{ secrets.DB_USER }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
