--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - 5432:5432
     container_name: postgres
     volumes:
-      pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
   app:
     image: golang:1.22
@@ -28,6 +28,6 @@ services:
       - DB_PASSWORD=root
       - DB_NAME=root
       - DB_PORT=5432
-      
+
 volumes:
   pgdata:
