--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Inicia o banco
       run: docker compose up -d postgres
 
+    - name: Testa o banco
+      run: docker compose exec postgres pg_isready
+
     - name: Lint
       uses: golangci/golangci-lint-action@v6
       with:
