--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.22'
 
     - name: Inicia o banco
-      run: docker compose up -d postgres
+      run: docker compose up postgres
 
     - name: Testa o banco
       run: docker compose exec postgres pg_isready
