--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,3 +41,16 @@ jobs:
       with:
         name: projeto_compilado
         path: main
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.6.0
+      with:
+        # Artifact name
+        name: programa
+        # A file, directory or wildcard pattern that describes what to upload
+        path: main
+        
+  docker:
+    needs: ci
+    uses: ./.github/workflows/Docker.yml
+    secrets: inherit
