--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,11 @@ jobs:
     - name: Test
       run: DB_HOST=${{ secrets.DB_HOST }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_USER=${{ secrets.DB_USER }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
 
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
     - name: Build
       run: go build main.go
 
@@ -41,3 +46,9 @@ jobs:
       with:
         name: projeto_compilado
         path: main
+
+
+  docker:
+    needs: build
+    uses: ./.github/workflows/Docker.yml
+    secrets: inherit
