--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,16 +37,15 @@ jobs:
     needs: ci
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Build
-      run: go build main.go
-
-    - name: Projeto compilado
+      run: go build -v main.go
+      
+    - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: projeto_compilado
+        name: programa
         path: main
-
 
   docker:
     needs: build
