--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -8,25 +8,25 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: setup Docker Build
-      uses: docker/setup-buildx-action@v2.0.0
+      uses: docker/setup-buildx-action@v3
       
     - name: Download a Build Artifact
-      uses: actions/download-artifact@v3.0.0
+      uses: actions/upload-artifact@v4
       with:
         name: programa
       
     - name: Docker Login
-      uses: docker/login-action@v2.0.0
+      uses: docker/login-action@v3
       with:
         username: ivanfarina08
         password: ${{ secrets.SENHA_DOCKER }}
         
         
     - name: Build and push Docker images
-      uses: docker/build-push-action@v3.0.0
+      uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile
