--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: programa
+        path: .
       
     - name: Docker Login
       uses: docker/login-action@v3
