--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: programa
-        path: ./main
+        path: main
       
     - name: Docker Login
       uses: docker/login-action@v3
