--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,13 +39,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: go build -v main.go
+      run: go build main.go
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
         name: programa
-        path: ./main
+        path: main
 
   docker:
     needs: build
