--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Download a Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: programa
+        name: programa-${{ github.run_id }}
         path: main
       
     - name: Docker Login
