--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,7 +45,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: programa-${{ github.run_id }}
-        path: main
+        path: main1
 
   docker:
     needs: build
