--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: programa-${{ github.run_id }}
-        path: main1
+        path: main
       
     - name: Docker Login
       uses: docker/login-action@v3
