--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -14,9 +14,9 @@ jobs:
       uses: docker/setup-buildx-action@v3
       
     - name: Download a Build Artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/download-artifact@v4
       with:
-        name: programa-${{ github.run_id }}
+        name: programa
         path: main
       
     - name: Docker Login
